Spring 2017/File Structure/FileMatching/compiling_error.txt
/media/maxmya/Projects/Collage Projects/Spring 2017/File Structure/FileMatching/main.cpp: In function ‘int main()’:
/media/maxmya/Projects/Collage Projects/Spring 2017/File Structure/FileMatching/main.cpp:20:1: error: ‘of’ was not declared in this scope
 of
 ^
